[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaydet"
dynamic = ["version", "readme"]
description = "Simple and terminal-based personal diary app for your shell."
authors = [{name = "Mirat Can Bayrak"}]
license-files = ["LICENSE"]
keywords = ["diary", "terminal", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Environment :: Console :: Curses",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Topic :: Utilities",
    "Topic :: Office/Business :: Scheduling",
]
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit==4.0.1",
    "ruff==0.6.1",
    "pytest>=8.3",
    "pytest-cov>=5.0",
    "mcp>=0.9.0",
]
mcp = [
    "mcp>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/miratcan/kaydet"
Repository = "https://github.com/miratcan/kaydet"
Issues = "https://github.com/miratcan/kaydet/issues"

[project.entry-points."console_scripts"]
kaydet = "kaydet.cli:main"
kaydet-mcp = "kaydet.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = false

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "kaydet.__version__"}
readme = {file = ["README.md"], content-type = "text/markdown"}

[tool.ruff]
line-length = 79
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.ruff.lint.isort]
known-first-party = ["kaydet"]
